所有頁面開版

--- a/src/scss/index.scss
+++ b/src/scss/index.scss
@@ -961,6 +961,11 @@ footer {
 .poi-panel {
   padding: 0 15px 15px 15px;
   height: 100%;
+
+  > a {
+    color: $yellow;
+    text-decoration: underline !important;
+  }
 }
 
 .poi-title {
